--- a/assets/style.css
+++ b/assets/style.css
@@ -35,8 +35,31 @@ body {
 }
 .rightSide h1 {
     color: #d4af37;
+    font-size: 32px;
 }
 .rightSide h2 {
     color: #FF7700;
     margin: 20px auto 10px;
+    font-size: 25px;
+}
+.rightSide ul {
+    color: #444;
+    font-size: 18px;
+    margin-top: 5px;
+    font-weight: 600;
+    list-style-type: circle;
+    list-style-position: inside;
+}
+.rightSide a {
+    background-color: #d4af37;
+    border-radius: 100px;
+    color: #fff;
+    width: 100%;
+    display: inline-block;
+    text-align: center;
+    padding: 15px 0;
+    margin-top: 25px;
+    text-decoration: none;
+    outline: none;
+
 }
