--- a/assets/style.css
+++ b/assets/style.css
@@ -50,6 +50,9 @@ body {
     list-style-type: circle;
     list-style-position: inside;
 }
+.rightSide ul li {
+    margin-top: 5px;
+}
 .rightSide a {
     background-color: #d4af37;
     border-radius: 100px;
@@ -63,3 +66,6 @@ body {
     outline: none;
 
 }
+/* Question Page CSS starts */
+
+/* Question Page CSS end */
