--- a/assets/style.css
+++ b/assets/style.css
@@ -73,5 +73,15 @@ body {
     box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.2);
     min-height: 350px;
     width: 640px;
+    padding: 50px;
+}
+
+.title {
+    border-bottom: 1px solid #464646;
+    color: #464646;
+    padding-bottom: 10px;
+    margin-bottom: 30px;
+    font-weight: 600;
+    font-size: 24px;
 }
 /* Question Page CSS end */
