--- a/assets/style.css
+++ b/assets/style.css
@@ -67,7 +67,36 @@ body {
 
 }
 /* Question Page CSS starts */
+.box{
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.2);
+    min-height: 350px;
+    width: 640px;
+    padding: 50px;
+}
+.title {
+    border-bottom: 1px solid #464646;
+    color:#464646;
+    padding-bottom: 10px;
+    margin-bottom: 30px;
+    font-weight: 600;
+    font-size: 24px;
+}
 
+.header{
+    margin-bottom: 30px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.scoreBox, 
+.timerBox {
+    border-radius: 100px;
+    padding: 10px 15px;
+    border: 1px solid #444;
+    color: #444;
+}
 
 
 /* Question Page CSS end */
