--- a/assets/style.css
+++ b/assets/style.css
@@ -98,5 +98,29 @@ body {
     color: #444;
 }
 
+.questionBox {
+    background-color: #FF7700;
+    color: #fff;
+    border-radius: 10px;
+    padding: 10px 15px;
+
+}
+.optionBox{
+     display: grid;
+     grid-template-columns: 1fr 1fr;
+     margin: 30px 0;
+     grid-gap: 15px;
+}
+
+.optionBox span {
+    background-color: #ccc;
+    border-radius: 10px;
+    color: #444;
+    border: 1px solid #444;
+    padding: 10px 15px;
+
+
+}
+
 
 /* Question Page CSS end */
