--- a/assets/style.css
+++ b/assets/style.css
@@ -137,5 +137,25 @@ body {
        font-size: 20px;
 }
 
+.resultBox{
+     margin-bottom: 30px;
+     display: grid;
+     grid-template-columns: 1fr 1fr;
+     grid-row-gap: 15px;
+     font-size: 20px;
 
+}
+.resultBox *:nth-child(odd) {
+    text-align: right;
+}
+
+.resultBox span {
+    font-weight: 600;
+}
+
+.buttonBox{
+ border-top: 1px solid #444;
+ padding-top: 15px;
+ text-align: center;
+}
 /* Question Page CSS end */
