--- a/assets/style.css
+++ b/assets/style.css
@@ -155,7 +155,20 @@ body {
 
 .buttonBox{
  border-top: 1px solid #444;
- padding-top: 15px;
  text-align: center;
 }
+.buttonBox a {
+    background-color: #d4af37;
+    border-radius: 50px;
+    border: 0;
+    text-decoration: none;
+    color: #fff;
+    outline: none;
+    padding: 7px 15px;
+    margin-top: 30px;
+    display: inline-block;
+    
+}
 /* Question Page CSS end */
+
+/* Media Queries */
