--- a/assets/style.css
+++ b/assets/style.css
@@ -8,7 +8,7 @@
 
 body {
     font-family: 'Lato', sans-serif;
-    background-image: url('images/mount-doom-background.jpg');
+    background-image: url('./images/mount-doom-background.jpg');
     background-size: cover;
     display: flex;
     justify-content: center;
